@@ -16,6 +16,7 @@
 - SF Patch #1659868 Improved database level debugging
 - SF Patch #1659901 Import community and collection structure
 - SF Patch #1659837 ItemIterator now deals with item ids also
+- SF Patch #1659796 Create administrator wtih command line options
 
 (Mike Judd)
 - SF Patch #1528142 Malformed OAI-PMH response: illegal bytes in UTF-8 for SF Bug #1490162
